--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ioredis": "^5.6.1",
     "next": "15.3.2",
     "qs": "^6.14.0",
     "react": "^19.0.0",
