--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "ioredis": "^5.6.1",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
