--- a/env.example
+++ b/env.example
@@ -10,4 +10,9 @@ NEXTAUTH_SECRET=your_nextauth_secret_here
 REDIS_URL=redis://127.0.0.1:6379
 
 # OAuth Redirect URI (must match Xero app settings)
-REDIRECT_URI=http://localhost:3000/api/auth/callback/xero 
+REDIRECT_URI=http://localhost:3000/api/auth/callback/xero
+
+# Supabase Configuration
+SUPABASE_URL=https://cxqamciqlaazofrwxpsc.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here 
