--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/file-saver": "^2.0.7",
     "file-saver": "^2.0.5",
     "ioredis": "^5.6.1",
