--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.0",
     "@types/file-saver": "^2.0.7",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "ioredis": "^5.6.1",
     "next": "15.3.2",
