--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec next dev --turbopack",
+    "dev": "NODE_OPTIONS='--no-deprecation' nodemon --exec next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
