--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/decimal.js": "^0.0.32",
     "@types/file-saver": "^2.0.7",
     "date-fns": "^4.1.0",
+    "decimal.js": "^10.5.0",
     "file-saver": "^2.0.5",
     "ioredis": "^5.6.1",
     "next": "15.3.2",
