--- a/env.example
+++ b/env.example
@@ -15,4 +15,7 @@ REDIRECT_URI=http://localhost:3000/api/auth/callback/xero
 # Supabase Configuration
 SUPABASE_URL=https://cxqamciqlaazofrwxpsc.supabase.co
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here 
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# MongoDB Configuration
+MONGODB_URI=your_mongodb_connection_string_here 
