--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "decimal.js": "^10.5.0",
     "file-saver": "^2.0.5",
     "ioredis": "^5.6.1",
+    "mongodb": "^6.17.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "nodemon": "^3.1.10",
