--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@types/decimal.js": "^0.0.32",
     "@types/file-saver": "^2.0.7",
+    "@vercel/blob": "^1.1.1",
     "date-fns": "^4.1.0",
     "decimal.js": "^10.5.0",
     "file-saver": "^2.0.5",
