--- a/env.example
+++ b/env.example
@@ -18,4 +18,11 @@ SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # MongoDB Configuration
-MONGODB_URI=your_mongodb_connection_string_here 
+MONGODB_URI=your_mongodb_connection_string_here
+
+# Pipedrive API Keys (tenant-specific)
+# For tenant 6dd39ea4-e6a6-4993-a37a-21482ccf8d22
+PIPEDRIVE_KEY=your_pipedrive_api_key_tenant_1
+# For tenant ea67107e-c352-40a9-a8b8-24d81ae3fc85
+PIPEDRIVE_KEY_2=your_pipedrive_api_key_tenant_2
+# Note: Tenant ab4b2a02-e700-4fe8-a32d-5419d4195e1b has Pipedrive disabled 
