--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.17.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "qs": "^6.14.0",
     "react": "^19.0.0",
