--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "next-auth": "^5.0.0-beta.28",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
