--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/blob": "^1.1.1",
     "date-fns": "^4.1.0",
     "decimal.js": "^10.5.0",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "ioredis": "^5.6.1",
     "mongodb": "^6.17.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/exceljs": "^0.5.3",
     "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
